# agent-os-pocketflow

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_TO_WARP_MIGRATION_PLAN.md  CLEANUP.md  CODEBASE_IMPROVEMENT_RECOMMENDATIONS.md  CONTRIBUTING.md  END_TO_END_VALIDATION_REPORT.md  IMPLEMENTATION_PLAN.md  INTEGRATION_GAP.md  METRICS.md  PATTERN_ANALYZER_ENHANCEMENT_PLAN.md  POCKETFLOW_TOOLS_IMPLEMENTATION_PLAN.md  README.md  REVISED_SUBAGENT_INTEGRATION_PLAN.md  SUBAGENT_INTEGRATION_PLAN.md  SUBTASK_5_2_VALIDATION_REPORT.md  SUBTASK_5_2_VALIDATION_REPORT_CORRECTED.md  TECHNICAL_DEBT_REPORT.md  TODO_ANALYSIS.md  WARP.md  WORKFLOW_AGENT_REFACTORING_PLAN.md  baseline_full_generation.txt  baseline_generator_output.txt  baseline_hashes.txt  baseline_test_results.txt  claude-code-agents-scorecard.md  codex-review.md  comprehensive_integration_validation_summary.md  config.yml  document-creation-subagent-plan.md  document-creation-subagent-refactoring-plan.md  memory.md  plan_product_integration_test_results.md  pocketflow-tools-analysis.md  pyproject.toml  setup-claude-code.sh  setup-cursor.sh  (+2 more)
.agent-os/workflows/contentanalyzer/: README.md  __init__.py  flow.py  main.py  nodes.py  pyproject.toml  router.py  tasks.md
.agent-os/workflows/contentanalyzer/docs/: design.md
.agent-os/workflows/contentanalyzer/schemas/: __init__.py  models.py
.agent-os/workflows/contentanalyzer/tests/: __init__.py  test_api.py  test_flow.py  test_nodes.py
.agent-os/workflows/contentanalyzer/utils/: __init__.py  call_llm.py
.claude/: config.json  settings.local.json
WorkingFIles/: claude-code-agents-update-plan.md  setup-scripts-update-guide.md
baseline_out/baselinetoolworkflow/: README.md  __init__.py  flow.py  main.py  nodes.py  pyproject.toml  requirements.txt  router.py  tasks.md
baseline_out/baselinetoolworkflow/docs/: design.md  tasks.md
baseline_out/baselinetoolworkflow/schemas/: __init__.py  models.py
baseline_out/baselinetoolworkflow/tests/: __init__.py  test_api.py  test_flow.py  test_nodes.py
baseline_out/baselinetoolworkflow/utils/: __init__.py  data_mapper.py  http_client.py
docker/: Dockerfile.ci  entrypoint-ci.sh
docs/: CI_CD_INTEGRATION.md  COMMON_ANTIPATTERNS.md  CONFIGURATION.md  CONTEXT_ROT_REMEDIATION_PLAN.md  DESIGN_FIRST_IMPLEMENTATION_PLAN.md  DEVELOPER_QUICKSTART.md  END_TO_END_VALIDATION_REPORT.md  FRAMEWORK_ANALYSIS_PLAN.md  FRAMEWORK_VS_USAGE.md  GENERATOR_REFACTORING_CLEAN_CUTOVER.md  GENERATOR_REFACTORING_PLAN.md  IMPLEMENTATION_PLAN.md  MIGRATION_GUIDE.md  PATTERN_ANALYZER_ENHANCEMENT_PLAN.md  PHASE4_COMPLETION_SUMMARY.md  PHASE5_RELEASE_NOTES.md  POCKETFLOW_BEST_PRACTICES.md  POCKETFLOW_IMPLEMENTATION_PLAN.md  POCKETFLOW_ORCHESTRATOR_UPDATE_PLAN.md  POCKETFLOW_PATTERN_COOKBOOK.md  README.md  REVISED_SUBAGENT_INTEGRATION_PLAN.md  SUBAGENT_INTEGRATION_PLAN.md  UNIFIED_FRAMEWORK_MISSION.md  agent-os-documentation-2025-08-27.md  agent-os-pocketflow-integration-plan.md  analyze_product_integration_test_results.md  claude-code-agents-scorecard.md  claude-code-infrastructure-analysis.md  claude-code-sub-agents-guide.md  codex-review.md  comprehensive_integration_validation_summary.md  design.md  document-creation-subagent-refactoring-plan.md  documentation-discovery-user-guide.md  documentation-fetch-implementation-plan.md  execute_task_integration_test_results.md  installation-simplification-implementation-plan.md  integration_test_plan.md  phase-2-documentation-discovery-plan.md  (+13 more)
framework-tools/: agent_coordination.py  antipattern_demo.py  antipattern_detector.py  check-pocketflow-install.py  complex_scenario_tests.py  context_manager.py  coordinator.py  dependency_orchestrator.py  end_to_end_test_scenarios.py  generate-example.sh  pattern_analyzer.py  pattern_definitions.py  performance-cli.py  run_end_to_end_tests.py  simple_pattern_test.py  smart_cli.py  smart_features.py  status_reporter.py  template_validator.py  test-generator.py  test_full_generation_with_dependencies.py  test_smart_features.py  validation_feedback.py  workflow_graph_generator.py
framework-tools_documentation/: agent_coordination_doc.md  antipattern_demo_doc.md  check-pocketflow-install_doc.md  context_manager_doc.md  dependency_orchestrator_doc.md  index.md  pattern_analyzer_doc.md  pattern_definitions_doc.md  pocketflow-integration-plan.md  pocketflow-tools-analysis.md  status_reporter_doc.md  template_validator_doc.md  test-generator_doc.md  validation_feedback_doc.md  workflow_graph_generator_doc.md
orchestration/: orchestrator-hooks.md
pocketflow-tools/: agent_coordination.py  antipattern_demo.py  complex_scenario_tests.py  context_manager.py  coordinator.py  dependency_orchestrator.py  end_to_end_test_scenarios.py  generate-example.sh  generator.py  pattern_analyzer.py  pattern_definitions.py  run_end_to_end_tests.py  simple_pattern_test.py  smart_cli.py  status_reporter.py  template_validator.py  test-full-generation.py  test-generator.py  test_analyzer_phase5.py  (+11 more)
setup/: base.sh  (+6 more)
test-user-experience/data_pipeline/.agent-os/workflows/salesetl/: README.md  __init__.py  flow.py  main.py  nodes.py  pyproject.toml  router.py  tasks.md
test-user-experience/data_pipeline/.agent-os/workflows/salesetl/docs/: design.md
test-user-experience/data_pipeline/.agent-os/workflows/salesetl/schemas/: __init__.py
test-user-experience/data_pipeline/.agent-os/workflows/salesetl/tests/: __init__.py  test_api.py  test_flow.py  test_nodes.py
test-user-experience/data_pipeline/.agent-os/workflows/salesetl/utils/: __init__.py
test-user-experience/rest_api/.agent-os/workflows/userauthservice/: README.md  __init__.py  flow.py  main.py  nodes.py  pyproject.toml  router.py  tasks.md
test-user-experience/rest_api/.agent-os/workflows/userauthservice/docs/: design.md
test-user-experience/rest_api/.agent-os/workflows/userauthservice/schemas/: __init__.py
test-user-experience/rest_api/.agent-os/workflows/userauthservice/tests/: __init__.py  test_api.py  test_flow.py  test_nodes.py
test-user-experience/rest_api/.agent-os/workflows/userauthservice/utils/: __init__.py
(+454 files in other folders)
