[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-os-pocketflow"
version = "0.1.0"
description = "Agent OS + PocketFlow Framework - Meta-system for generating PocketFlow workflow templates"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pocketflow_tools*"]
exclude = ["setup*", "shared*", "templates*", "standards*", "instructions*", "pocketflow-tools*"]
