[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baselinetoolworkflow"
version = "0.1.0"
description = "Baseline generation snapshot for TOOL pattern"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "aiohttp>=3.9.0",
    "fastapi>=0.104.0",
    "pocketflow>=0.1.0",
    "pydantic>=2.0",
    "requests>=2.31.0",
    "tenacity>=8.2.0",
    "uvicorn[standard]>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "factory-boy>=3.3.0",
    "httpx>=0.25.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "ty>=0.5.0",
]

[project.urls]
Repository = "https://github.com/your-org/your-repo"
Issues = "https://github.com/your-org/your-repo/issues"

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N806"]
exclude = [".git", ".venv", "__pycache__", "build", "dist"]
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
[tool.ty]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["tests/", "build/", ".venv/"]
[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-ra", "--strict-markers", "--strict-config", "--cov=.", "--cov-report=term-missing"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = ["slow: marks tests as slow", "integration: marks tests as integration tests"]
[tool.coverage.run]
source = ["."]
branch = true
omit = ["tests/*", ".venv/*", "build/*", "dist/*"]
