[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contentanalyzer"
version = "0.1.0"
description = "Analyze content using document retrieval and LLM processing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pocketflow",
    "pydantic>=2.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "ty>=0.5.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
